List markers should always get a layout when the list item does.

A follow-on to https://chromium-review.googlesource.com/602352.

Turns out it is safer to always update the list marker position after
laying out a list item.

Bug: 780927
Change-Id: I09ef8e38bcb65a33593d8b6198f29dbd9dce26c7
Reviewed-on: https://chromium-review.googlesource.com/753362
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513886}
Former-commit-id: 7a22edaa3ae7ef77e5d2499062bbccf24f1f5f1c